[gd_scene load_steps=9 format=3 uid="uid://ciesu8xyj70oc"]

[ext_resource type="PackedScene" uid="uid://dvslagwd6sk4r" path="res://objects/props/etc/shop_counter.tscn" id="1_qcbok"]
[ext_resource type="Script" uid="uid://daaahmd3o4n3n" path="res://objects/interactables/shop/toon_shop.gd" id="2_vftls"]
[ext_resource type="Resource" uid="uid://br3mtjoo6t1xc" path="res://objects/items/pools/shop_rewards.tres" id="3_p7vyn"]
[ext_resource type="PackedScene" uid="uid://dd0wuj2dwr7st" path="res://objects/items/world_item/world_item.tscn" id="4_g4xfv"]
[ext_resource type="Resource" uid="uid://d4by7sqhd5sko" path="res://objects/items/pools/shop_progressives.tres" id="5_lqr8r"]
[ext_resource type="PackedScene" uid="uid://c2fhjplpn3a0t" path="res://objects/interactables/shop/ui/shop_ui.tscn" id="5_rwm0n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_288hp"]
size = Vector3(3.686, 1.3689, 0.980285)

[sub_resource type="BoxShape3D" id="BoxShape3D_lfevo"]
size = Vector3(3.75098, 0.639999, 0.426056)

[node name="ToonShop" instance=ExtResource("1_qcbok")]
script = ExtResource("2_vftls")

[node name="Items" type="Node3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0.16)

[node name="Item1" parent="Items" index="0" instance=ExtResource("4_g4xfv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27132, 1.2058, 0)
pool = ExtResource("3_p7vyn")
override_replacement_rolls = true

[node name="Item2" parent="Items" index="1" instance=ExtResource("4_g4xfv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.638313, 1.2058, 0)
pool = ExtResource("3_p7vyn")
override_replacement_rolls = true

[node name="Item3" parent="Items" index="2" instance=ExtResource("4_g4xfv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.93, 1.206, 0)
pool = ExtResource("5_lqr8r")
override_replacement_rolls = true

[node name="Item4" parent="Items" index="3" instance=ExtResource("4_g4xfv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.7, 1.206, 0)
pool = ExtResource("5_lqr8r")
override_replacement_rolls = true

[node name="InteractArea" type="Area3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.268533, 0.779796)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.129959, 0.837524, -1.31612)
shape = SubResource("BoxShape3D_288hp")

[node name="CounterCollision" type="StaticBody3D" parent="." index="3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CounterCollision" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.13623, 0.299568, 0.154861)
shape = SubResource("BoxShape3D_lfevo")

[node name="CamPositions" type="Node3D" parent="." index="4"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 1.095, 1.15, -1)

[node name="1" type="Camera3D" parent="CamPositions" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125, 0, 0)
fov = 52.0

[node name="2" type="Camera3D" parent="CamPositions" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
fov = 52.0

[node name="3" type="Camera3D" parent="CamPositions" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
fov = 52.0

[node name="4" type="Camera3D" parent="CamPositions" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8, 0, 0)
fov = 52.0

[node name="ShopUI" parent="." index="5" instance=ExtResource("5_rwm0n")]
visible = false

[connection signal="body_entered" from="InteractArea" to="." method="body_entered"]
[connection signal="s_exit" from="ShopUI" to="." method="exit"]
[connection signal="s_left_pressed" from="ShopUI" to="." method="move_selection" binds= [-1]]
[connection signal="s_purchase" from="ShopUI" to="." method="purchase"]
[connection signal="s_right_pressed" from="ShopUI" to="." method="move_selection" binds= [1]]
